# UniversalMailer

./: .gitignore  .travis.yml  LICENSE  README.md  download.html  faq.html  index.html  params.json  question  usage.html  whatsnew.html
mimetic/mimetic/: Makefile  Makefile.am  Makefile.in  body.cxx  config.h.in  config_win32.h.in  contentdescription.cxx  contentdescription.h  contentdisposition.cxx  contentdisposition.h  contentid.cxx  contentid.h  contenttransferencoding.cxx  contenttype.cxx  fieldparam.cxx  header.cxx  header.h  libmimetic.la  message.cxx  mimeentity.cxx  mimeentitylist.h  mimetic.h  mimeversion.cxx  mimeversion.h  stamp-h1  streambufs.h  strutils.cxx  strutils.h  utils.cxx  utils.h  version.cxx  version.h
mimetic/mimetic/codec/: .qp.h.swp  Makefile  Makefile.am  Makefile.in  base64.cxx  base64.h  base64.lo  code.h  codec.h  codec_chain.h  libmimeticcodec.la  other_codecs.h  qp.cxx  qp.h  qp.lo
mimetic/mimetic/os/: Makefile  Makefile.am  Makefile.in  file_iterator.cxx  file_iterator.lo  fileop.cxx  fileop.lo  libmimeticos.la  mmfile.cxx  mmfile.lo  stdfile.cxx  stdfile.lo  utils.cxx  utils.lo
mimetic/mimetic/parser/: Makefile  Makefile.am  Makefile.in  itparser.h
mimetic/mimetic/rfc822/: Makefile  Makefile.am  Makefile.in  address.cxx  address.lo  addresslist.cxx  addresslist.lo  body.h  datetime.cxx  datetime.h  datetime.lo  field.cxx  field.lo  fieldvalue.cxx  fieldvalue.h  fieldvalue.lo  group.cxx  group.h  group.lo  header.cxx  header.lo  libmimeticrfc822.la  mailbox.cxx  mailbox.lo  mailboxlist.cxx  mailboxlist.h  mailboxlist.lo  message.cxx  message.h  message.lo  (+4 more)
(+205 files in other folders)
